qpg-core/src/main/java/com/qpg/parser/antlr/WorkloadParser.java
// Generated from /Users/dollychen/Documents/qpg_workspace/QPG_experiment/lib/QueryPathGraph-master/qpg-core/src/main/antlr4/WorkloadParser.g4 by ANTLR 4.9.2
 package com.qpg.parser.antlr; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WorkloadParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOT=1, COMMA=2, COLON=3, SEMICOLON=4, OPEN_PAR=5, CLOSE_PAR=6, ASSIGN=7, 
		STAR=8, PLUS=9, MINUS=10, TILDE=11, PIPE2=12, DIV=13, MOD=14, LT2=15, 
		GT2=16, AMP=17, PIPE=18, LT=19, LT_EQ=20, GT=21, GT_EQ=22, EQ=23, NOT_EQ1=24, 
		NOT_EQ2=25, QUESTION_MARK=26, LBRACE=27, RBRACE=28, LBRACKET=29, RBRACKET=30, 
		SELECT=31, FROM=32, WHERE=33, REL=34, ORDER=35, BY=36, AND=37, CLASS=38, 
		DESC_=39, ASC_=40, INT_=41, STRING_=42, DATE_=43, FLOAT_=44, K_=45, HW_=46, 
		ID=47, NUMERIC_LITERAL=48, STRING_LITERAL=49, SINGLE_LINE_COMMENT=50, 
		MULTILINE_COMMENT=51, WS=52;
	public static final int
		RULE_input = 0, RULE_card_ratio = 1, RULE_class_attr = 2, RULE_attr_type = 3, 
		RULE_any_name = 4, RULE_keyword = 5, RULE_class_name = 6, RULE_attr_name = 7, 
		RULE_rel_name = 8, RULE_stmt = 9, RULE_freq = 10, RULE_classStmt = 11, 
		RULE_attr_stmt = 12, RULE_attr_pk = 13, RULE_rel_stmt = 14, RULE_queryStmt = 15, 
		RULE_tablePath = 16, RULE_table_name = 17, RULE_whereClause = 18, RULE_expr = 19, 
		RULE_orderByClause = 20, RULE_orderEle = 21, RULE_asc_desc = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"input", "card_ratio", "class_attr", "attr_type", "any_name", "keyword", 
			"class_name", "attr_name", "rel_name", "stmt", "freq", "classStmt", "attr_stmt", 
			"attr_pk", "rel_stmt", "queryStmt", "tablePath", "table_name", "whereClause", 
			"expr", "orderByClause", "orderEle", "asc_desc"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "','", "':'", "';'", "'('", "')'", "'='", "'*'", "'+'", 
			"'-'", "'~'", "'||'", "'/'", "'%'", "'<<'", "'>>'", "'&'", "'|'", "'<'", 
			"'<='", "'>'", "'>='", "'=='", "'!='", "'<>'", "'?'", "'{'", "'}'", "'['", 
			"']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DOT", "COMMA", "COLON", "SEMICOLON", "OPEN_PAR", "CLOSE_PAR", 
			"ASSIGN", "STAR", "PLUS", "MINUS", "TILDE", "PIPE2", "DIV", "MOD", "LT2", 
			"GT2", "AMP", "PIPE", "LT", "LT_EQ", "GT", "GT_EQ", "EQ", "NOT_EQ1", 
			"NOT_EQ2", "QUESTION_MARK", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
			"SELECT", "FROM", "WHERE", "REL", "ORDER", "BY", "AND", "CLASS", "DESC_", 
			"ASC_", "INT_", "STRING_", "DATE_", "FLOAT_", "K_", "HW_", "ID", "NUMERIC_LITERAL", 
			"STRING_LITERAL", "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WorkloadParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WorkloadParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InputContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(WorkloadParser.EOF, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).exitInput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WorkloadParserVisitor ) return ((WorkloadParserVisitor<? extends T>)visitor).visitInput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SELECT) | (1L << REL) | (1L << CLASS))) != 0)) {
				{
				{
				setState(46);
				stmt();
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(52);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Card_ratioContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(WorkloadParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(WorkloadParser.RBRACKET, 0); }
		public TerminalNode NUMERIC_LITERAL() { return getToken(WorkloadParser.NUMERIC_LITERAL, 0); }
		public TerminalNode STAR() { return getToken(WorkloadParser.STAR, 0); }
		public Card_ratioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_card_ratio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).enterCard_ratio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).exitCard_ratio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WorkloadParserVisitor ) return ((WorkloadParserVisitor<? extends T>)visitor).visitCard_ratio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Card_ratioContext card_ratio() throws RecognitionException {
		Card_ratioContext _localctx = new Card_ratioContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_card_ratio);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(LBRACKET);
			setState(55);
			_la = _input.LA(1);
			if ( !(_la==STAR || _la==NUMERIC_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(56);
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_attrContext extends ParserRuleContext {
		public Class_nameContext class_name() {
			return getRuleContext(Class_nameContext.class,0);
		}
		public TerminalNode DOT() { return getToken(WorkloadParser.DOT, 0); }
		public Attr_nameContext attr_name() {
			return getRuleContext(Attr_nameContext.class,0);
		}
		public Class_attrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_attr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).enterClass_attr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).exitClass_attr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WorkloadParserVisitor ) return ((WorkloadParserVisitor<? extends T>)visitor).visitClass_attr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_attrContext class_attr() throws RecognitionException {
		Class_attrContext _localctx = new Class_attrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class_attr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			class_name();
			setState(59);
			match(DOT);
			setState(60);
			attr_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attr_typeContext extends ParserRuleContext {
		public TerminalNode INT_() { return getToken(WorkloadParser.INT_, 0); }
		public TerminalNode STRING_() { return getToken(WorkloadParser.STRING_, 0); }
		public TerminalNode FLOAT_() { return getToken(WorkloadParser.FLOAT_, 0); }
		public TerminalNode DATE_() { return getToken(WorkloadParser.DATE_, 0); }
		public Attr_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).enterAttr_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).exitAttr_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WorkloadParserVisitor ) return ((WorkloadParserVisitor<? extends T>)visitor).visitAttr_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Attr_typeContext attr_type() throws RecognitionException {
		Attr_typeContext _localctx = new Attr_typeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attr_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT_) | (1L << STRING_) | (1L << DATE_) | (1L << FLOAT_))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Any_nameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(WorkloadParser.ID, 0); }
		public KeywordContext keyword() {
			return getRuleContext(KeywordContext.class,0);
		}
		public TerminalNode STRING_LITERAL() { return getToken(WorkloadParser.STRING_LITERAL, 0); }
		public TerminalNode OPEN_PAR() { return getToken(WorkloadParser.OPEN_PAR, 0); }
		public Any_nameContext any_name() {
			return getRuleContext(Any_nameContext.class,0);
		}
		public TerminalNode CLOSE_PAR() { return getToken(WorkloadParser.CLOSE_PAR, 0); }
		public Any_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_any_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).enterAny_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).exitAny_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WorkloadParserVisitor ) return ((WorkloadParserVisitor<? extends T>)visitor).visitAny_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Any_nameContext any_name() throws RecognitionException {
		Any_nameContext _localctx = new Any_nameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_any_name);
		try {
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				match(ID);
				}
				break;
			case SELECT:
			case FROM:
			case WHERE:
			case REL:
			case ORDER:
			case BY:
			case AND:
			case CLASS:
			case INT_:
			case STRING_:
			case DATE_:
			case FLOAT_:
			case HW_:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				keyword();
				}
				break;
			case STRING_LITERAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				match(STRING_LITERAL);
				}
				break;
			case OPEN_PAR:
				enterOuterAlt(_localctx, 4);
				{
				setState(67);
				match(OPEN_PAR);
				setState(68);
				any_name();
				setState(69);
				match(CLOSE_PAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeywordContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(WorkloadParser.SELECT, 0); }
		public TerminalNode FROM() { return getToken(WorkloadParser.FROM, 0); }
		public TerminalNode WHERE() { return getToken(WorkloadParser.WHERE, 0); }
		public TerminalNode REL() { return getToken(WorkloadParser.REL, 0); }
		public TerminalNode ORDER() { return getToken(WorkloadParser.ORDER, 0); }
		public TerminalNode BY() { return getToken(WorkloadParser.BY, 0); }
		public TerminalNode AND() { return getToken(WorkloadParser.AND, 0); }
		public TerminalNode CLASS() { return getToken(WorkloadParser.CLASS, 0); }
		public TerminalNode INT_() { return getToken(WorkloadParser.INT_, 0); }
		public TerminalNode STRING_() { return getToken(WorkloadParser.STRING_, 0); }
		public TerminalNode DATE_() { return getToken(WorkloadParser.DATE_, 0); }
		public TerminalNode FLOAT_() { return getToken(WorkloadParser.FLOAT_, 0); }
		public TerminalNode HW_() { return getToken(WorkloadParser.HW_, 0); }
		public KeywordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keyword; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).enterKeyword(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).exitKeyword(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WorkloadParserVisitor ) return ((WorkloadParserVisitor<? extends T>)visitor).visitKeyword(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KeywordContext keyword() throws RecognitionException {
		KeywordContext _localctx = new KeywordContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_keyword);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SELECT) | (1L << FROM) | (1L << WHERE) | (1L << REL) | (1L << ORDER) | (1L << BY) | (1L << AND) | (1L << CLASS) | (1L << INT_) | (1L << STRING_) | (1L << DATE_) | (1L << FLOAT_) | (1L << HW_))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_nameContext extends ParserRuleContext {
		public Any_nameContext any_name() {
			return getRuleContext(Any_nameContext.class,0);
		}
		public Class_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).enterClass_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).exitClass_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WorkloadParserVisitor ) return ((WorkloadParserVisitor<? extends T>)visitor).visitClass_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_nameContext class_name() throws RecognitionException {
		Class_nameContext _localctx = new Class_nameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_class_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			any_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attr_nameContext extends ParserRuleContext {
		public Any_nameContext any_name() {
			return getRuleContext(Any_nameContext.class,0);
		}
		public Attr_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).enterAttr_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).exitAttr_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WorkloadParserVisitor ) return ((WorkloadParserVisitor<? extends T>)visitor).visitAttr_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Attr_nameContext attr_name() throws RecognitionException {
		Attr_nameContext _localctx = new Attr_nameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_attr_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			any_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rel_nameContext extends ParserRuleContext {
		public Any_nameContext any_name() {
			return getRuleContext(Any_nameContext.class,0);
		}
		public Rel_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rel_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).enterRel_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).exitRel_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WorkloadParserVisitor ) return ((WorkloadParserVisitor<? extends T>)visitor).visitRel_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rel_nameContext rel_name() throws RecognitionException {
		Rel_nameContext _localctx = new Rel_nameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_rel_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			any_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public ClassStmtContext classStmt() {
			return getRuleContext(ClassStmtContext.class,0);
		}
		public Rel_stmtContext rel_stmt() {
			return getRuleContext(Rel_stmtContext.class,0);
		}
		public QueryStmtContext queryStmt() {
			return getRuleContext(QueryStmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WorkloadParserVisitor ) return ((WorkloadParserVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_stmt);
		try {
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CLASS:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				classStmt();
				}
				break;
			case REL:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				rel_stmt();
				}
				break;
			case SELECT:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				queryStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FreqContext extends ParserRuleContext {
		public TerminalNode NUMERIC_LITERAL() { return getToken(WorkloadParser.NUMERIC_LITERAL, 0); }
		public FreqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_freq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).enterFreq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).exitFreq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WorkloadParserVisitor ) return ((WorkloadParserVisitor<? extends T>)visitor).visitFreq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FreqContext freq() throws RecognitionException {
		FreqContext _localctx = new FreqContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_freq);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(NUMERIC_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassStmtContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(WorkloadParser.CLASS, 0); }
		public Class_nameContext class_name() {
			return getRuleContext(Class_nameContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(WorkloadParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(WorkloadParser.RBRACE, 0); }
		public List<Attr_stmtContext> attr_stmt() {
			return getRuleContexts(Attr_stmtContext.class);
		}
		public Attr_stmtContext attr_stmt(int i) {
			return getRuleContext(Attr_stmtContext.class,i);
		}
		public TerminalNode NUMERIC_LITERAL() { return getToken(WorkloadParser.NUMERIC_LITERAL, 0); }
		public List<TerminalNode> COMMA() { return getTokens(WorkloadParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(WorkloadParser.COMMA, i);
		}
		public FreqContext freq() {
			return getRuleContext(FreqContext.class,0);
		}
		public ClassStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).enterClassStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).exitClassStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WorkloadParserVisitor ) return ((WorkloadParserVisitor<? extends T>)visitor).visitClassStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassStmtContext classStmt() throws RecognitionException {
		ClassStmtContext _localctx = new ClassStmtContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_classStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(CLASS);
			setState(89);
			class_name();
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NUMERIC_LITERAL) {
				{
				setState(90);
				match(NUMERIC_LITERAL);
				}
			}

			setState(93);
			match(LBRACE);
			{
			setState(94);
			attr_stmt();
			}
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(95);
				match(COMMA);
				setState(96);
				attr_stmt();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			match(RBRACE);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NUMERIC_LITERAL) {
				{
				setState(103);
				freq();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attr_stmtContext extends ParserRuleContext {
		public Attr_typeContext attr_type() {
			return getRuleContext(Attr_typeContext.class,0);
		}
		public Attr_nameContext attr_name() {
			return getRuleContext(Attr_nameContext.class,0);
		}
		public TerminalNode STAR() { return getToken(WorkloadParser.STAR, 0); }
		public Attr_pkContext attr_pk() {
			return getRuleContext(Attr_pkContext.class,0);
		}
		public Attr_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).enterAttr_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WorkloadParserListener ) ((WorkloadParserListener)listener).exitAttr_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WorkloadParserVisitor ) return ((WorkloadParserVisitor<? extends T>)visitor).visitAttr_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Attr_stmtContext attr_stmt() throws RecognitionException {
		Attr_stmtContext _localctx = new Attr_stmtContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_attr_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			attr_type();
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STAR) {
				{
				setState(107);
				match(STAR);
				}
			}

			setState(110);
			attr_name();
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACKET) {
				{
				setState(111);
				attr_pk();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
